--- a/pnas/si.tex
+++ b/pnas/si.tex
@@ -26,7 +26,7 @@ The utility of a memory one player \(p\) against an opponent \(q\),
 
 \begin{proof}
 
-It was discussed that \(u_q(p)\) it's the product of the steady states \(v\) and
+It was discussed that \(u_q(p)\) it is the product of the steady states \(v\) and
 the PD payoffs,
 
 \[u_q(p) = v \cdot (R, S, T, P).\]
@@ -55,7 +55,7 @@ More specifically, with \((R, P, S, T) = (3, 1, 0, 5)\)
 \end{equation}
 \endgroup
 
-Let us consider the numerator of the \(u_q(p)\). The cross product terms \(p_ip_j\)
+Let us consider the numerator of \(u_q(p)\). The cross product terms \(p_ip_j\)
 are given by,
 
 \begingroup
