--- a/pnas/PNAS-template-main.tex
+++ b/pnas/PNAS-template-main.tex
@@ -243,9 +243,8 @@ source research framework for the study of the IPD.
     Eq.~\ref{eq:defection_condition_two} hold and Defector takes over the
     population. B. For $q_{1}=(0.96703, 0.54723, 0.97268, 0.71482)$,
     $q_{2}=(0.69773, 0.21609, 0.97627, 0.0062)$ and
-    $q_{3}=(0.25298, 0.43479, 0.77938, 0.19769)$, Eq.~\ref{eq:defection_condition_one} fails and
-    Eq.~\ref{eq:defection_condition_two} holds and Defector does not take over
-    the population.}
+    $q_{3}=(0.25298, 0.43479, 0.77938, 0.19769)$, Eq.~\ref{eq:defection_condition_one} fails
+    and Defector does not take over the population.}
 \end{figure}
 
 \subsection*{Best response memory-one strategies}
