--- a/pnas/cover_letter.tex
+++ b/pnas/cover_letter.tex
@@ -5,7 +5,7 @@
 \usepackage{authblk}
 
 \title{Cover Letter: Stability of defection, optimisation of strategies and the
-limits of memory in the Prisoner's Dilemma..}
+limits of memory in the Prisoner's Dilemma.}
 
 \author[1]{Nikoleta E. Glynatsi}
 \author[1]{Vincent A. Knight}
