--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,3 +1,10 @@
+@inproceedings{belkin2002using,
+  title={Using manifold stucture for partially labeled classification},
+  author={Belkin, Mikhail and Niyogi, Partha},
+  booktitle={Advances in neural information processing systems},
+  pages={929--936},
+  year={2002}
+}
 @article{Flood1958,
 author = {Merrill M. Flood},
 title = {Some Experimental Games},
@@ -394,6 +401,27 @@ isbn="978-3-540-37497-8"
   title = {Elementary Linear Algebra: Applications Version},
   year = 2014
 }
+@article{Matsui1992,
+title = "Best response dynamics and socially stable strategies",
+journal = "Journal of Economic Theory",
+volume = "57",
+number = "2",
+pages = "343 - 362",
+year = "1992",
+issn = "0022-0531",
+doi = "https://doi.org/10.1016/0022-0531(92)90040-O",
+url = "http://www.sciencedirect.com/science/article/pii/002205319290040O",
+author = "Matsui, Akihiko",
+}
+@article{Benureau2018,
+  title={Re-run, repeat, reproduce, reuse, replicate: transforming code into scientific contributions},
+  author={Benureau, Fabien CY and Rougier, Nicolas P},
+  journal={Frontiers in neuroinformatics},
+  volume={11},
+  pages={69},
+  year={2018},
+  publisher={Frontiers}
+}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%DATA%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 @misc{glynatsi2019,
   author       = {Glynatsi, Nikoleta E.},
@@ -423,4 +451,17 @@ isbn="978-3-540-37497-8"
   timestamp = {Wed, 24 Apr 2019 12:21:25 +0200},
   biburl    = {https://dblp.org/rec/bib/journals/corr/abs-1904-00973},
   bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%SOFTWARE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+@software{nikoleta_glynatsi_2019,
+  author       = {Nikoleta E. Glynatsi and
+                  Vince Knight},
+  title        = {{Nikoleta-v3/Memory-size-in-the-prisoners-dilemma: 
+                   initial release}},
+  month        = nov,
+  year         = 2019,
+  publisher    = {Zenodo},
+  version      = {0.0.1},
+  doi          = {10.5281/zenodo.3533146},
+  url          = {https://doi.org/10.5281/zenodo.3533146}
 }
